fix spacing issues

--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -51,7 +51,6 @@
     padding: 2px 12px 6px;
 
     &._max_btn {
-      width: fit-content;
       width: -webkit-fit-content;
     }
   }
